fix(radio button): wrong color disabled state (#186)
* fix(modal): enabled closing of modal programatically when preventing event

* fix(radio button): corrected color of border on disabled state

* Revert "fix(modal): enabled closing of modal programatically when preventing event"

This reverts commit a42a02e3e3bb45a1dd4b08c950fa5a58ed080b14.

--- a/core/src/components/radio-button/radio-button-vars.scss
+++ b/core/src/components/radio-button/radio-button-vars.scss
@@ -6,7 +6,7 @@
   --tds-radio-button-background-hover: var(--tds-blue-800);
   --tds-radio-button-background-focus: var(--tds-blue-800);
   --tds-radio-button-disabled: var(--tds-grey-600);
-  --tds-radio-button-border-color-disabled-after: var(--tds-grey-700);
+  --tds-radio-button-border-color-disabled-after: var(--tds-grey-500);
   --tds-radio-button-color-disabled-after: var(--tds-grey-700);
   --tds-radio-button-color-disabled-before: var(--tds-grey-700);
 }
